.prelude/i-effect/repos/tsgo/testdata/baselines/reference/effect-v3/floatingEffect_stream.errors.txt
=== Metadata ===
Effect version: 3.19.19

/.src/floatingEffect_stream.ts(6,3): error TS377058: This Effect-able `Stream<number, never, never>` value is neither yielded nor assigned to a variable. effect(floatingEffect)


==== /.src/floatingEffect_stream.ts (1 errors) ====
    // @effect-v3
    import * as Effect from "effect/Effect"
    import * as Stream from "effect/Stream"
    
    export const shouldWarn = Effect.gen(function*() {
      Stream.succeed(42)
      ~~~~~~~~~~~~~~~~~~
!!! error TS377058: This Effect-able `Stream<number, never, never>` value is neither yielded nor assigned to a variable. effect(floatingEffect)
    })
    
